--- a/Config/Config.ini
+++ b/Config/Config.ini
@@ -2,14 +2,16 @@
 Path=Z:\Rack&Material\
 
 [LABEL PHOTO PATH]
-Path=Z:\Label Photo
+Path=Z:\Label Photo\
 
 [ACHIEVE PATH]
-Path=Z:\Achieve
+Path=Z:\Achieve\
 
 [STATUS PATH]
 Path=Z:\StatusSTN\Status5\Status5.Txt
 
 [PSN FOLDER PATH]
-Path=Z:\PSN
+Path=Z:\PSN\
 
+[LABEL TEMPLATE PATH]
+Path=Z:\Label Template\
